# NutriScan

./: .gitignore  README.md  docker-compose.yml
backend/app/: Dockerfile.backend  README.md  pyproject.toml
backend/app/src/: config.py  main.py
backend/app/src/models/: file_request.py
backend/app/src/routes/: minio_health_check.py  minio_routes.py
frontend/app/: Dockerfile.frontend  README.md  index.html
frontend/app/css/: base.css  colors.css  components.css  dark-mode.css  styles.css
frontend/app/js/: app.js
frontend/app/js/food/: foodDisplay.js  selectedFood.js
frontend/app/js/theme/: themeToggle.js
ssl/: public.crt
